--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+quarkus.datasource.jdbc.driver=com.mysql.cj.jdbc.Driver
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/pasticceria
+quarkus.datasource.username=root
+quarkus.datasource.password=Aa63U2mh
+
 quarkus.mongodb.connection-string=mongodb://simorusso04:Aa63U2mh@cluster0-shard-00-00.0sj0u.mongodb.net:27017,cluster0-shard-00-01.0sj0u.mongodb.net:27017,cluster0-shard-00-02.0sj0u.mongodb.net:27017/?ssl=true&replicaSet=atlas-13lxpb-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0
 quarkus.mongodb.database=pasticceria
 
