--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,20 @@ quarkus.http.cors.methods=GET,PUT,POST,DELETE,PATCH,OPTIONS
 quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
 quarkus.http.cors.exposed-headers=location,link
 quarkus.http.cors.access-control-allow-credentials=true
+
+twilio.account.sid=ACcab671412459d739cb30337f8312336e
+twilio.auth.token=a80eb54fcd1a17a23e2d2a38b3f4c699
+twilio.phone.number=+393348458260
+
+
+
+quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
+quarkus.mailer.from=simorusso04@gmail.com
+quarkus.mailer.host=smtp.gmail.com
+quarkus.mailer.port=587
+quarkus.mailer.start-tls=REQUIRED
+quarkus.mailer.username=simorusso04@gmail.com
+quarkus.mailer.password=slyh hyqb bjfa kilr
+
+quarkus.mailer.mock=false
+
