aggiornato application-dev.properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
 quarkus.datasource.username=root
-quarkus.datasource.password=Aa63U2mh
+quarkus.datasource.password=Spunzio2001
 
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/pasticceria
