modificato application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.mongodb.database=pasticceria
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:3000,http://localhost:3001,http://localhost:3002,http://localhost:3003,http://localhost:3004,http://localhost:3005,http://localhost:3006,http://localhost:3007,http://localhost:3008,http://localhost:3009
 quarkus.http.cors.methods=GET,PUT,POST,DELETE,PATCH,OPTIONS
-quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
+quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with,credentials
 quarkus.http.cors.exposed-headers=location,link
 quarkus.http.cors.access-control-allow-credentials=true
 
